[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/welcome.gd" type="Script" id=1]
[ext_resource path="res://assets/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 120
font_data = ExtResource( 3 )

[node name="welcome" type="Node2D"]
script = ExtResource( 1 )

[node name="welcome_board" type="TextureRect" parent="."]
margin_left = -2.0
margin_right = 1918.0
margin_bottom = 1085.0
texture = ExtResource( 2 )
expand = true

[node name="welcome_label" type="RichTextLabel" parent="welcome_board"]
margin_left = 437.0
margin_top = 182.0
margin_right = 1520.0
margin_bottom = 375.0
custom_fonts/normal_font = SubResource( 1 )
text = "Loony Lips 2.0"

[node name="start_button" type="Button" parent="welcome_board"]
margin_left = 654.923
margin_top = 645.748
margin_right = 1247.92
margin_bottom = 835.748
custom_fonts/font = SubResource( 1 )
text = "START"

[connection signal="pressed" from="welcome_board/start_button" to="." method="_on_start_button_pressed"]
